Se inician las pruebas con jest sin éxito
