# swagger.json
@@ -37,10 +37,6 @@
                         "application/json":{
                             "schema":{
                                 "type": "object",
-                                "required": [
-                                    "email",
-                                    "password"
-                                ],
                                 "properties": {
                                     "email":{
                                         "type": "string"
